@@ -36,7 +36,12 @@ version = "0.0.1-SNAPSHOT"
 description = ""
 
 bootRun {
-    jvmArgs = ["-Des.set.netty.runtime.available.processors=false"]
+    jvmArgs = [
+            "-Des.set.netty.runtime.available.processors=false",
+            "-Dio.netty.tryReflectionSetAccessible=true",
+            "--illegal-access=warn",
+//            "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED"
+    ]
 }
 
 sourceCompatibility=1.8
@@ -46,7 +51,6 @@ assert System.properties["java.specification.version"] == "1.8" || "11" || "12" 
 apply from: "gradle/docker.gradle"
 apply from: "gradle/sonar.gradle"
 apply from: "gradle/swagger.gradle"
-apply from: 'gradle/heroku.gradle'
 //jhipster-needle-gradle-apply-from - JHipster will add additional gradle scripts to be applied here
 
 if (project.hasProperty("prod") || project.hasProperty("gae")) {
@@ -214,7 +218,7 @@ gitProperties {
 checkstyle {
     toolVersion '${checkstyle_version}'
     configFile file("checkstyle.xml")
-    checkstyleTest.enabled = false
+    checkstyleTest.enabled = true
 }
 nohttp {
     source.include "build.gradle", "README.md"
@@ -298,11 +302,11 @@ dependencies {
     }
     implementation "org.zalando:problem-spring-web"
     implementation "io.springfox:springfox-bean-validators"
-    implementation "com.stripe:stripe-java:20.30.0"
     implementation "mysql:mysql-connector-java"
+    implementation "com.stripe:stripe-java:${stripe_version}"
+    implementation "io.sentry:sentry-logback:${sentry_version}"
+    implementation "io.sentry:sentry-spring-boot-starter:${sentry_version}"
     implementation "org.mapstruct:mapstruct:${mapstruct_version}"
-    implementation 'io.sentry:sentry-spring-boot-starter:3.2.0'
-    implementation 'io.sentry:sentry-logback:3.2.0'
 
     implementation "org.liquibase:liquibase-core"
     liquibaseRuntime "org.liquibase:liquibase-core"
@@ -329,7 +333,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter'
     testImplementation 'org.junit.platform:junit-platform-runner'
     testImplementation 'org.awaitility:awaitility'
-    testImplementation('org.mock-server:mockserver-junit-jupiter:5.11.2') {
+    testImplementation("org.mock-server:mockserver-junit-jupiter:${junit_mockserver_version}") {
         exclude group: 'com.sun.mail', module: 'mailapi'
         exclude group: 'javax.servlet', module: 'javax.servlet-api'
         exclude group: 'javax.validation'
@@ -375,5 +379,7 @@ if (project.hasProperty("nodeInstall")) {
         download = true
     }
 }
+
+clean.dependsOn cleanResources
 compileJava.dependsOn processResources
 processResources.dependsOn bootBuildInfo
